--- a/_posts/2024-01-27-Markdown.md
+++ b/_posts/2024-01-27-Markdown.md
@@ -48,7 +48,8 @@ I<br>Love<br>Learning
 ---
 
 Use `the script here ` script
-``` powershell
+``` 
+powershell
 $r = get-help
 
 ```
@@ -67,6 +68,7 @@ Tables
         4 .List four
 
 ---
+
  -List four 
 ---
 
@@ -91,8 +93,8 @@ Link to sections
 ---
 ## Task List Checkbox
 
- - [] Task #1
- - [] Task #2
+ - [ ] Task #1
+ - [ ] Task #2
 ---
 
 ## Table
