Edit Hello World

--- a/_posts/2024-02-14-Hello.md
+++ b/_posts/2024-02-14-Hello.md
@@ -1,9 +1,9 @@
 ---
-title:  "Git"
+title:  "Hello World"
 date:   2024-02-15 14:00:00 +0000
-categories: [Git]
-tags: [Git]
+categories: [Test]
+tags: [Test]
 ---
 
 Hello World!!
-![AY image](/assets/img/AY.jpg)
+<!-- ![AY image](/assets/img/AY.jpg) -->
