--- a/_posts/2024-02-19-IDOR.md
+++ b/_posts/2024-02-19-IDOR.md
@@ -1,5 +1,5 @@
 ---
-title:  "THM: IDOR"
+title:  "THM: IDOR - Insecure Direct Object Refernce"
 date:   2024-02-19 18:00:00 +0000
 categories: [WebHacking]
 tags: [WebHacking]
