--- a/_posts/2024-02-19-IDOR.md
+++ b/_posts/2024-02-19-IDOR.md
@@ -107,7 +107,7 @@ What is the minimum number of accounts you need to create to check for IDORs bet
 Task 6  Where are IDORs located
 ---
 Where are they located?
-The vulnerable endpoint you're targeting may not always be something you see in the address bar. It could be ````content your browser loads in via an AJAX request``` or something that you find referenced in a JavaScript file. 
+The vulnerable endpoint you're targeting may not always be something you see in the address bar. It could be ```content your browser loads in via an AJAX request``` or something that you find referenced in a JavaScript file. 
 
 
 
