--- a/_posts/2025-01-20-Test.md
+++ b/_posts/2025-01-20-Test.md
@@ -1,8 +1,8 @@
 ---
 title:  "Test"
 date:   2025-01-20 14:00:00 +0000
-categories: []
-tags: []
+categories: [test]
+tags: [test]
 ---
 
 ![image](/assets/img/protocols-servers12.png)
